# tatoh-agent

./: .env.example  .env.exmaple  .gitignore  .impeccable.md  CLAUDE.md  Makefile  README.md  TODO_FLAT_GRAPH_MIGRATION.md  auth-plan.md  browse_gdrive.py  closing_phase_plan.md  deploy-plan.md  design-performance.md  di-practice.md  docker-compose.override.yml  docker-compose.yml  high-level-arch.md  langgraph.json  local-storage-setup.md  prompt-plan.md  pyproject.toml  requirements.txt  transcriptions.md  transform_pms_data.py
agent_api/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  langgraph.json  pyproject.toml  pyrefly.toml
agent_api/agent/: agent_node.py  graph.py  model.py  pricing.py  prompt.py  prompts.py  root_graph.py  schemas.py  state.py  types.py
agent_api/agent-legacy/: __init__.py  agent_node.py  glossary.py  language_detection.py  pricing.py  prompts.py  root_graph.py  search_result_aggregator.py  types.py  ui_cleanup.py
agent_api/agent-legacy/closing_phase/: prompts.py  schemas.py
agent_api/agent-legacy/common_tools/: __init__.py  find_boat_schedules.py  find_bus_schedules.py  get_gopro_service_info.py  get_kohtao_arrival_guide.py  get_kohtao_current_weather.py  get_kohtao_general_season.py  get_room_info.py  get_rooms_list.py  record_preference.py  record_visiting_info.py
agent_api/agent-legacy/search_phase/: prompts.py
agent_api/agent-legacy/services/: accessors.py  config.py  knowledge_service.py  room_availability.py  room_cache.py  room_schemas.py  room_service.py  schedule_service.py  scoped.py  singletons.py
agent_api/agent-legacy/utils/: __init__.py  date_utils.py  http_utils.py  pms_client.py
agent_api/agent/clients/: http_utils.py  pms_client.py
agent_api/alembic/: env.py
agent_api/api/: config.py  dependencies.py  main.py  schemas.py
agent_api/core/: config.py  photo_helpers.py
agent_api/db/: database.py  models.py
agent_api/scripts/: db_manager.py  dedup_photos.py  reupload_photos.py
agent_api/seeds/: export_rooms_from_gdrive.py
agent_api/tests/: test_search_available_rooms.py
(+272 files in other folders)
